tests/content-scanning/frontmatter/snapshot.txt
*-----------------------------------------------*
|    WARNING: THIS IS A DEBUG BUILD OF ZINE     |
|-----------------------------------------------|
| Debug builds enable expensive sanity checks   |
| that reduce performance.                      |
|                                               |
| To create a release build, run:               |
|                                               |
|           zig build --release=fast            |
|                                               |
| If you're investigating a bug in Zine, then a |
| debug build might turn confusing behavior     |
| into a crash.                                 |
|                                               |
| To disable all forms of concurrency, you can  |
| add the following flag to your build command: |
|                                               |
|              -Dsingle-threaded                |
|                                               |
*-----------------------------------------------*

content/wrong-syntax.smd:18:2:
    .layout = "foo.html",
     ^
unexpected '.', expected: ',' or '}'


content/index.smd:5:11: error: missing layout file
|    .layout = "",
|              ^^

content/validation-errors.smd:5:11: error: missing layout file
|    .layout = "",
|              ^^

content/validation-errors.smd:9:4: error: invalid value in 'aliases'
|    "bad path 💩",
|    ^^^^^^^^^^^^^^^

content/validation-errors.smd:16:10: error: invalid name in alternatives
|    .name = "",
|            ^^

content/validation-errors.smd:21:12: error: invalid path in alternatives
|    .output = "",
|              ^^

----------------------------
       -- VARIANT --
----------------------------
.id = 0,
.content_dir_path = content

  ------- SECTION -------
.index = 1,
.section_path = content/,
.pages = [
   content/validation-errors.smd -> content/validation-errors/index.html
   content/wrong-syntax.smd -> content/wrong-syntax/index.html
],



 ----- EXIT CODE: 1 -----
